--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "dependencies": {
     "config": "^3.3.7",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^6.3.3"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
+  "scripts": {
+    "deploy": "npm run build && gh-pages -d dist"
   }
 }
