--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "dependencies": {
     "config": "^3.3.7",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "express": "^4.17.1",
+    "cors": "^2.8.5"
   },
   "scripts": {
-    "deploy": "npm run build && gh-pages -d dist"
+    "start": "node app.js"
   }
 }
